Composer: Preserve whitespace in text/plain drafts
https://lore.kernel.org/kvm/17435518cb127e7c1493edac09704623de9ae3f8.camel@infradead.org/ shows a case where I attempted to send a patch with Evolution, and it got modified so that it did not apply.
Evolution converted some simple spaces, to non-breaking spaces (U+00A0).
The workflow is one I've been using occasionally for years, just putting the patch into Evolution's local Drafts folder and then opening that draft and sending it. e.g. :
$ mv `git format-patch HEAD^` ~/.local/share/evolution/mail/local/.Drafts/new
(You have to select the local Drafts folder, then another folder, then select Drafts again because the new message is seen. I should probably file a separate bug about that)
This is again a fairly old 3.44.4-0ubuntu2. I'll attempt to get something newer set up to test.