I#2659 - Composer: Preserve whitespace in text/plain drafts

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/2659